--- a/app/views/home/extract_component_logic.html.erb
+++ b/app/views/home/extract_component_logic.html.erb
@@ -1,3 +1,12 @@
+<div class="my-2">
+  <%=
+    link_to 'Back Home',
+    home_path,
+    class:"transition duration-500 px-4 py-2 font-bold border text-sm rounded-lg focus:outline-none hover:bg-blue-900 hover:text-white hover:border-blue-900"
+  %>
+</div>
+<h1 class="text-2xl font-bold text-gray-800">Extract Component Logic</h1>
+
 <div class="max-w-lg p-10 mx-auto">
   <div
     class="px-10 py-6 bg-gray-300 rounded"
