--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,37 @@
-<div x-data="game()" class="px-10 flex items-center justify-center min-h-screen">
-  <h1 class="fixed top-0 right-0 p-10 font-bold text-3xl">
+<div class="flex flex-row justify-between my-2 text-center">
+  <%=
+    link_to 'Data Binding And Toogle Visibilty',
+    data_binding_and_toggle_visibility_path,
+    class:"transition duration-500 px-4 py-2 font-bold border text-sm rounded-lg focus:outline-none hover:bg-blue-900 hover:text-white hover:border-blue-900"
+  %>
+  <%=
+    link_to 'Two Way Data Binding',
+    two_way_data_binding_path,
+    class:"transition duration-500 px-4 py-2 font-bold border text-sm rounded-lg focus:outline-none hover:bg-blue-900 hover:text-white hover:border-blue-900"
+  %>
+  <%=
+    link_to 'Extract Component Logic',
+    extract_component_logic_path,
+    class:"transition duration-500 px-4 py-2 font-bold border text-sm rounded-lg focus:outline-none hover:bg-blue-900 hover:text-white hover:border-blue-900"
+  %>
+  <%=
+    link_to 'Transitions',
+    transitions_path,
+    class:"transition duration-500 px-4 py-2 font-bold border text-sm rounded-lg focus:outline-none hover:bg-blue-900 hover:text-white hover:border-blue-900"
+  %>
+  <%=
+    link_to 'Transtitions 102',
+    transitions_102_path,
+    class:"transition duration-500 px-4 py-2 font-bold border text-sm rounded-lg focus:outline-none hover:bg-blue-900 hover:text-white hover:border-blue-900"
+  %>
+</div>
+<h1 class="text-2xl font-bold text-gray-800">Alpine Memory Game</h1>
+<div x-data="game()" class="relative flex items-center justify-center min-h-screen px-10">
+  <h1 class="absolute top-0 right-0 p-10 text-3xl font-bold">
     <span x-text="points"></span>
     <span class="text-xs">pts</span>
   </h1>
-  <div class="flex-1 grid grid-cols-4 gap-10">
+  <div class="grid flex-1 grid-cols-4 gap-10">
     <template x-for="card in cards">
       <div>
         <button
@@ -28,7 +56,7 @@
     show = true;
     setTimeout(() => show = false, 1000)
   "
-  class="fixed bottom-0 right-0 bg-green-500 text-white py-2 px-4 mb-4 mr-4 rounded"
+  class="fixed bottom-0 right-0 px-4 py-2 mb-4 mr-4 text-white bg-green-500 rounded"
 >
 </div>
 
