Add Header Nav and Footer

--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AlpineRailsLearning</title>
+    <title>Rails Video Games</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -14,12 +14,39 @@
     <header class="border-b border-gray-800">
       <nav class="container flex items-center justify-between px-4 py-6 mx-auto">
         <div class="flex items-center">
-          <a href=dashboard>
+          <%= link_to dashboard_path do %>
             <%= image_tag 'laracasts-logo.svg', alt: 'laracasts', class:'w-32 flex-none' %>
-          </a>
+          <% end %>
+          <ul class="flex ml-16 space-x-8">
+            <li><%= link_to 'Games', dashboard_path, class:'hover:text-gray-400' %></li>
+            <li><%= link_to 'Reviews', dashboard_path, class:'hover:text-gray-400' %></li>
+            <li><%= link_to 'Coming Soon', dashboard_path, class:'hover:text-gray-400' %></li>
+          </ul>
+        </div>
+        <div class="flex items-center">
+          <div class="relative">
+            <input type="text" class="w-64 px-3 py-1 pl-8 text-sm bg-gray-800 rounded-full focus:shadow-outline focus:outline-none" placeholder="Search...">
+            <div class="absolute top-0 flex items-center h-full ml-2">
+              <svg class="w-4 text-gray-400 fill-current" viewBox="0 0 24 24"><path class="heroicon-ui" d="M16.32 14.9l5.39 5.4a1 1 0 01-1.42 1.4l-5.38-5.38a8 8 0 111.41-1.41zM10 16a6 6 0 100-12 6 6 0 000 12z"/></svg>
+            </div>
+          </div>
+          <div class="ml-6">
+            <%= link_to dashboard_path do %>
+              <%= image_tag 'avatar.jpg', alt: 'avatar', class:'rounded-full w-8' %>
+            <% end %>
+          </div>
         </div>
       </nav>
     </header>
-    <%= yield %>
+
+    <main class="py-8">
+      <%= yield %>
+    </main>
+
+    <footer class="border-t border-gray-800">
+      <div class="container px-4 py-6 mx-auto">
+        Powered by <a href="#" class="underline hover:text-gray-400">IGDB API</a>
+      </div>
+    </footer>
   </body>
 </html>
