--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container px-4 mx-auto">
   <h2 class="font-semibold tracking-wide text-blue-500 uppercase"> Popular Games</h2>
-  <div class="grid grid-cols-6 gap-12 pb-16 text-sm border-b border-gray-800 popular-games">
+  <div class="grid grid-cols-1 gap-12 pb-16 text-sm border-b border-gray-800 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-6 popular-games">
     <% 12.times do %>
       <div class="mt-8 game">
         <div class="relative inline-block">
@@ -17,17 +17,61 @@
     <% end %>
   </div>
 
-  <div class="flex my-10">
-    <div class="w-3/4 mr-32 recently-reviewed">
+  <div class="flex flex-col my-10 lg:flex-row">
+    <div class="w-full mr-0 lg:w-3/4 lg:mr-32 recently-reviewed">
       <h2 class="font-semibold tracking-wide text-blue-500 uppercase">Recently Reviewed</h2>
       <div class="mt-8 space-y-12 recently-reviewed-container">
-        <div>Game Card</div>
-        <div>Game Card</div>
-        <div>Game Card</div>
+        <% 3.times do %>
+          <div class="flex px-6 py-6 bg-gray-800 rounded-lg shadow-md game">
+            <div class="relative flex-none">
+              <%= link_to dashboard_path do %>
+                <%= image_tag 'doom.jpg', alt: 'game cover', class:'w-48 hover:opacity-75 transition ease-in-out duration-150' %>
+              <% end %>
+              <div class="absolute bottom-0 right-0 w-16 h-16 bg-gray-900 rounded-full" style="right:-20px;bottom:-20px">
+                <div class="flex items-center justify-center h-full text-xs font-semibold">80%</div>
+              </div>
+            </div>
+            <div class="ml-12">
+              <%= link_to 'Final Fantasy 7 Remake', '#', class: 'block text-lg fon-semibold leading-tight hover:text-gray-400 mt-4' %>
+              <div class="mt-1 text-gray-400">Playstation 4</div>
+              <p class="hidden mt-6 text-gray-400 lg:block">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae quia consectetur voluptas similique laborum animi repudiandae qui maiores, nisi doloribus ratione ut sed. Aliquam eveniet dolore tempore magni ratione nulla?
+              </p>
+            </div>
+          </div>
+        <% end %>
       </div>
     </div>
-    <div class="w-1/4 most-anticipated">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia vitae illum illo sit iusto quibusdam possimus nulla deserunt itaque qui. Expedita, harum. Eius minus voluptas corporis distinctio facilis nam odit?
+    <div class="w-full mt-12 lg:w-1/4 most-anticipated lg:mt-0">
+      <h2 class="font-semibold tracking-wide text-blue-500 uppercase">Most Anticipated</h2>
+      <div class="mt-8 space-y-10 most-anticipated-container">
+        <% 4.times do %>
+          <div class="flex game">
+            <%= link_to dashboard_path do %>
+              <%= image_tag 'cyberpunk.jpg', alt: 'game cover', class:'w-16 hover:opacity-75 transition ease-in-out duration-150' %>
+            <% end %>
+            <div class="ml-4">
+              <%= link_to 'Final Fantasy 7 Remake', '#', class: 'hover:text-gray-400' %>
+              <div class="text-sm text-gray-400">Sept 16, 2020</div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+
+      <h2 class="mt-12 font-semibold tracking-wide text-blue-500 uppercase">Coming Soon</h2>
+      <div class="mt-8 space-y-10 most-anticipated-container">
+        <% 4.times do %>
+          <div class="flex game">
+            <%= link_to dashboard_path do %>
+              <%= image_tag 'ghost.jpg', alt: 'game cover', class:'w-16 hover:opacity-75 transition ease-in-out duration-150' %>
+            <% end %>
+            <div class="ml-4">
+              <%= link_to 'Final Fantasy 7 Remake', '#', class: 'hover:text-gray-400' %>
+              <div class="text-sm text-gray-400">Sept 16, 2020</div>
+            </div>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
